# arg-lmm

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
demo_files/: 10kb_region_20k_samples.argn  sims.N5000.chr1.arg  sims.N5000.chr10.arg  sims.N5000.chr2.arg  sims.N5000.chr3.arg  sims.N5000.chr4.arg  sims.N5000.chr5.arg  sims.N5000.chr6.arg  sims.N5000.chr7.arg  sims.N5000.chr8.arg  sims.N5000.chr9.arg  sims.N5000.phenotypes
src/arg_lmm/: __init__.py  arg_lmm.py  arg_rhe.py
tests/: smoke_test.py  test_arg_lmm.py
