[project]
name = "arg-lmm"
version = "0.1.0"
description = "Efficient complex trait analyses from ARG"
readme = "README.md"
authors = [
    { name = "arg-lmm developers" }
]
requires-python = ">=3.9"
dependencies = [
    "arg-needle-lib",
    #"chiscore" # Manual install process required, see README
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
arg-rhe = "arg_lmm.arg_rhe:arg_rhe"

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README_PyPI.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"